--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,11 @@ avatar_alt_text: Avatar
 # the "Read more ..." link apprears 
 excerpt_separator: <!--more-->
 
+
+
+future: true
+
+
 # CUSTOMIZE
 #
 # Flags below are optional - customize them if you wish
